fixed stretched avatar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -308,7 +308,7 @@ ol li time {
     font-size: 14px;
 }
 
-ol li img.avatar {
+#messages ol li img.avatar {
     float: left;
     height: 40px;
     margin-bottom: 5px;
